--- a/index.html
+++ b/index.html
@@ -125,30 +125,77 @@
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
-                            TEXXT backkk
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="#" class="btn btn--white"> Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-1-of-3">
                     <div class="card">
                         <div class="card__side card__side--front">
-                            TEXXT 2 front
+                            <div class="card__picture card__picture--2">
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading--span card__heading--span-2">The Forest Hiker</span>
+                            </h4>
+                            <div class="card__detail">
+                                <ul>
+                                    <li>7 day tours</li>
+                                    <li>Up to 40 peope</li>
+                                    <li>6 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulity : Medium</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-2">
-                            TEXXT 2 backkk
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$497</p>
+                                </div>
+                                <a href="#" class="btn btn--white"> Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-1-of-3">
                     <div class="card">
                         <div class="card__side card__side--front">
-                            TEXXT 3 front
+                            <div class="card__picture card__picture--3">
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading--span card__heading--span-3">The Snow Aventurer</span>
+                            </h4>
+                            <div class="card__detail">
+                                <ul>
+                                    <li>5 day tours</li>
+                                    <li>Up to 15 peope</li>
+                                    <li>3 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulity : Hard</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-3">
-                            TEXXT 3 backkk
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$597</p>
+                                </div>
+                                <a href="#" class="btn btn--white"> Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="" class="btn btn--green">Discover all tours</a>
             </div>
         </section>
     </main>
