--- a/index.html
+++ b/index.html
@@ -198,6 +198,52 @@
                 <a href="" class="btn btn--green">Discover all tours</a>
             </div>
         </section>
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" class="story__img" alt="Person on a tour">
+                        <figcaption class="story__caption"> Mary Smith</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            I had the best week ever with my family
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nah i dont know your meanLorem ipsum dolor sit amet, consectetur adipisicing elit. Animi error tempora illo non.Amet, molestias pariatur atque in sapiente impedit dignissimos omnis voluptates,ea assumenda rerum labore similique at neque.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" class="story__img" alt="Person on a tour">
+                        <figcaption class="story__caption"> Jack Wilson</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            My life is completely different now
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nah i dont know your meanLorem ipsum dolor sit
+                            amet, consectetur adipisicing elit. Animi error tempora illo non.Amet, molestias pariatur atque in
+                            sapiente impedit dignissimos omnis voluptates,ea assumenda rerum labore similique at neque.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">
+                    Read all stories &rarr;
+                </a>
+            </div>
+        </section>
     </main>
     <!-- <section class="grid-test">
         <div class="row">
