add : section book -> add form and card

--- a/index.html
+++ b/index.html
@@ -251,6 +251,29 @@
                 </a>
             </div>
         </section>
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Start booking now
+                                </h2>
+                            </div>
+                            <div class="form__group">
+                                <input id="fullname"  autocomplete="false" type="text" class="form__input" placeholder="Full name" required>
+                                <label for="fullname" class="form__label"> Fullname</label>
+                            </div>
+                            <div class="form__group">
+                                <input id="email" autocomplete="false" type="email" class="form__input" placeholder="Email address" required>
+                                <label for="email" class="form__label"> Email</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- <section class="grid-test">
         <div class="row">
