--- a/index.html
+++ b/index.html
@@ -296,6 +296,31 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="img/logo-green-2x.png" alt="" class="footer__logo">
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Built by <a href="" class="footer__link">JONAS SCHMEDTMANN</a> for his online course <a href="#" class="footer__link">advanced css and sass</a>.
+                    Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial uses, but not to claim it as your own design.
+                    A credit to the original autho, Jonas Schdtmann, is of course always appreciated!
+                </p>
+            </div>
+        </div>
+    </footer>
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
