feat: add popup and finish all section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <span class="heading-primary--main">outdoors</span>
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
-            <a href="#" class="btn btn--white btn--animated">discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">discover our tours</a>
         </div>
     </header>
     <main>
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popular tour
@@ -146,7 +146,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn--white"> Book now!</a>
+                                <a href="#popup" class="btn btn--white"> Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$497</p>
                                 </div>
-                                <a href="#" class="btn btn--white"> Book now!</a>
+                                <a href="#popup" class="btn btn--white"> Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$597</p>
                                 </div>
-                                <a href="#" class="btn btn--white"> Book now!</a>
+                                <a href="#popup" class="btn btn--white"> Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -337,6 +337,24 @@
             </div>
         </div>
     </footer>
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these temrs before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate itaque voluptatibus aliquid dolores temporibus possimus, voluptas rerum error quis perspiciatis amet quaerat mollitia harum eveniet ex! Magni tempore unde repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione facilis nemo pariatur vitae unde corporis ipsam, voluptates voluptas deleniti cumque, tempore nobis magnam, laudantium libero earum magni exercitationem dolorum consectetur!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate itaque voluptatibus aliquid dolores temporibus possimus, voluptas rerum error quis perspiciatis amet quaerat mollitia harum eveniet ex! Magni tempore unde repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione facilis nemo pariatur vitae unde corporis ipsam, voluptates voluptas deleniti cumque, tempore nobis magnam, laudantium libero earum magni exercitationem dolorum consectetur!
+                </p>
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
+        </div>
+    </div>
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
