--- a/index.html
+++ b/index.html
@@ -68,9 +68,18 @@
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
-                        <img src="img/nat-1.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-                        <img src="img/nat-2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-                        <img src="img/nat-3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                            sizes="(max-width:900px) 20vw, (max-width: 600px) 30vw, 300px"
+                            alt="Photo 1" class="composition__photo composition__photo--p1"
+                            src="img/nat-1-large.jpg">
+                        <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                            sizes="(max-width:900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 2"
+                            class="composition__photo composition__photo--p2" 
+                            src="img/nat-2-large.jpg">
+                        <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                            sizes="(max-width:900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 3"
+                            class="composition__photo composition__photo--p3" 
+                            src="img/nat-3-large.jpg">
                     </div>
                 </div>
             </div>
@@ -314,7 +323,17 @@
     </main>
     <footer class="footer">
         <div class="footer__logo-box">
-            <img src="img/logo-green-2x.png" alt="" class="footer__logo">
+            <picture class="footer__logo">
+                <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5rem">
+                <img 
+                    srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" 
+                    alt="Full logo" 
+                    class="footer__logo"
+                    src="img/logo-green-2x.png" 
+                >
+                <!-- src is used if the browser didnt support srcset way -->
+            </picture>
+            <!-- <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="" class="footer__logo"> -->
         </div>
         <div class="row">
             <div class="col-1-of-2">
