--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/icon-font.css">
+    <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900">
     <title>Sebuah web untuk belajar lagi css</title>
 </head>
@@ -374,67 +374,5 @@
             </div>
         </div>
     </div>
-    <!-- <section class="grid-test">
-        <div class="row">
-            <div class="col-1-of-2">
-                This is col 1 of 2
-            </div>
-            <div class="col-1-of-2">
-                This is col 1 of 2
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1-of-3">
-                This is col 1 of 3
-            </div>
-            <div class="col-1-of-3">
-                This is col 1 of 3
-            </div>
-            <div class="col-1-of-3">
-                This is col 1 of 3
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1-of-3">
-                This is col 1 of 3
-            </div>
-            <div class="col-2-of-3">
-                This is col 2 of 3
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1-of-4">
-                This is col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                This is col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                This is col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                This is col 1 of 4
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1-of-4">
-                This is col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                This is col 1 of 4
-            </div>
-            <div class="col-2-of-4">
-                This is col 2 of 4
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1-of-4">
-                This is col 1 of 4
-            </div>
-            <div class="col-3-of-4">
-                This is col 3 of 4
-            </div>
-        </div>
-    </section> -->
 </body>
 </html>
